feat: Ajout page partenaires avec 7 liens + intégration footer
- Création page /partenaires avec contenu complet
- Ajout illustration SVG personnalisée
- Intégration lien partenaires dans footer
- SEO optimisé avec métadonnées et structured data
- Plan de déploiement documenté

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -182,6 +182,7 @@ const footerProducts = getProductsByBrand('Talika', 1);
             <li><a href="/collections/regime-glp1/">Régime Alimentaire</a></li>
             <li><a href="/collections/alternatives-glp1/">Alternatives</a></li>
             <li><a href="/collections/medecins-glp1-france/">Médecins</a></li>
+            <li><a href="/partenaires">Partenaires</a></li>
           </ul>
         </div>
         
